--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.alphabet"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -68,11 +68,12 @@ android {
         implementation "com.mikepenz:fastadapter:5.4.1"
         implementation "com.mikepenz:fastadapter-extensions-binding:5.4.1"
         implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.1"
-        implementation "androidx.compose.ui:ui:1.0.2"
+        implementation "androidx.compose.ui:ui:1.0.3"
         implementation "androidx.activity:activity-compose:1.3.1"
-        implementation "androidx.compose.material:material:1.0.2"
-        implementation "androidx.compose.ui:ui-tooling:1.0.2"
-        implementation "androidx.compose.ui:ui-viewbinding:1.0.2"
+        implementation "androidx.compose.material:material:1.0.3"
+        implementation "androidx.compose.ui:ui-tooling:1.0.3"
+        implementation "androidx.compose.ui:ui-viewbinding:1.0.3"
+        implementation 'com.google.accompanist:accompanist-flowlayout:0.18.0'
     }
 }
 
