--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.alphabet"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 32
         versionCode 1
         versionName "1.0"
@@ -56,14 +56,14 @@ android {
         implementation "androidx.recyclerview:recyclerview:1.2.1"
         implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
         implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-        implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-        implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+        implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
+        implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
         androidTestImplementation 'androidx.test.ext:junit:1.1.3'
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
         implementation("com.yahoofinance-api:YahooFinanceAPI:3.15.0")
         implementation("org.ta4j:ta4j-core:0.14")
         implementation("org.slf4j:slf4j-simple:1.7.30")
-        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
         implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 //        implementation "com.mikepenz:fastadapter:5.4.1"
 //        implementation "com.mikepenz:fastadapter-extensions-binding:5.4.1"
@@ -85,4 +85,5 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:dataframe:0.8.0-rc-7'
     implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:1.2.0'
     implementation 'com.github.ISchwarz23:SortableTableView:2.8.1'
+    implementation 'androidx.preference:preference:1.2.0'
 }
