--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,13 @@ plugins {
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.alphabet"
         minSdkVersion 26
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -51,36 +51,37 @@ android {
     dependencies {
 
         implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-        implementation 'androidx.core:core-ktx:1.8.0'
-        implementation 'androidx.appcompat:appcompat:1.4.2'
+        implementation 'androidx.core:core-ktx:1.9.0'
+        implementation 'androidx.appcompat:appcompat:1.6.0'
         implementation "androidx.recyclerview:recyclerview:1.2.1"
         implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
         implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-        implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
-        implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
-        androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-        androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+        implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+        implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+        androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
         implementation("com.yahoofinance-api:YahooFinanceAPI:3.15.0")
         implementation("org.ta4j:ta4j-core:0.14")
         implementation("org.slf4j:slf4j-simple:1.7.30")
-        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
         implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 //        implementation "com.mikepenz:fastadapter:5.4.1"
 //        implementation "com.mikepenz:fastadapter-extensions-binding:5.4.1"
         implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.1"
-        implementation "androidx.room:room-runtime:2.4.2"
-        kapt "androidx.room:room-compiler:2.4.2"
-        implementation "androidx.room:room-ktx:2.4.2"
+        implementation "androidx.room:room-runtime:2.5.0"
+        kapt "androidx.room:room-compiler:2.5.0"
+        implementation "androidx.room:room-ktx:2.5.0"
         implementation 'com.squareup.retrofit2:retrofit:2.9.0'
         implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
         implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
         implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     }
+    namespace 'com.example.alphabet'
 }
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'org.nield:kotlin-statistics:1.2.1'
     implementation 'org.jetbrains.kotlinx:dataframe:0.8.0-rc-7'
     implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:1.2.0'
