--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "androidx.navigation.safeargs.kotlin"
     id 'kotlin-parcelize'
     id 'kotlinx-serialization'
+    id 'org.jetbrains.kotlin.android'
 }
 
 apply plugin: 'kotlin-kapt'
@@ -41,17 +42,16 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     dependencies {
 
         implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-        implementation 'androidx.core:core-ktx:1.10.0'
         implementation 'androidx.appcompat:appcompat:1.6.1'
         implementation "androidx.recyclerview:recyclerview:1.3.0"
         implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -87,4 +87,6 @@ dependencies {
     implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:1.2.0'
     implementation 'com.github.ISchwarz23:SortableTableView:2.8.1'
     implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'com.github.evrencoskun:TableView:v0.8.9.4'
 }
