--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,6 @@ android {
         implementation 'androidx.legacy:legacy-support-v4:1.0.0'
         implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
         implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-        androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-        androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
         implementation("com.yahoofinance-api:YahooFinanceAPI:3.15.0")
         implementation("org.ta4j:ta4j-core:0.14")
         implementation("org.slf4j:slf4j-simple:1.7.30")
@@ -75,6 +73,14 @@ android {
         implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
         implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
         implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+        // Testing
+        androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+        testImplementation 'junit:junit:4.13.2'
+        testImplementation 'androidx.test:core-ktx:1.5.0'
+        testImplementation 'androidx.test.ext:junit:1.1.5'
+        debugImplementation("androidx.fragment:fragment-testing:1.5.7")
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     }
     namespace 'com.example.alphabet'
 }
